agregué mas informacion e imagenes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <nav></nav>
     <section>
-      <h1>¡Hola! Soy Isaac</h1>
+      <h1>¡HOLA! SOY ISAAC</h1>
       <p>Estudiante de diseño de tercer año..</p>
       <img src="/src/img/perfil.jpg"/> 
     </section>
@@ -54,9 +54,13 @@
       <img width=300px class="foto alt"="foto" src="src/img/foto.jpg"/>
       <p> Soy estudiante de diseño en la Universidad Autonoma Metropolitana, unidad Cuajimalpa. Me gusta aprender cosas nuevas que puedan nutrirme de conocimiento.
  
-        He estado aprendiendo mucho en diferntes software de diseño y me desempeño bien en creación de logos, marcas, identidades, así como el manejo de software CAD y maquinas CNC. 
-        
-        </p>
+        He estado aprendiendo mucho en diferentes software de diseño y me desempeño bien en creación de logos, marcas, identidades, así como el manejo de software CAD y maquinas CNC.</p>
+    </section>
+    <section>
+      <h2>HERRAMIENTAS QUE SÉ USAR</h2>
+      <p> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me considero hábil en todos los programas a los que he tenido acceso. </p>
+    </section>
+      
 
 
 
