--- a/index.html
+++ b/index.html
@@ -32,7 +32,30 @@
     ></script>
     <!-- fin importacion bootstrap  -->
   </head>
-
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <body>
     <nav></nav>
     <section>
@@ -59,6 +82,18 @@
     <section>
       <h2>HERRAMIENTAS QUE SÉ USAR</h2>
       <p> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me considero hábil en todos los programas a los que he tenido acceso. </p>
+    </section>
+    <section> 
+      <img width=250px class="ILLUSTRATOR alt"="ILLUSTRATOR" src="src/img/ILLUSTRATOR.png"/>
+      <img width=250px class="PHOTOSHOP alt"="PHOTOSHOP" src="src/img/PHOTOSHOP.png"/>
+      <img width=250px class="ANIMATE alt"="ANIMATE" src="src/img/ANIMATE.png"/>
+      <img width=250px class="AUTOCAD2 alt"="AUTOCAD2" src="src/img/AUTOCAD2.png"/>
+      <img width=250px class="3DMAX2 alt"="3DMAX2" src="src/img/3DMAX2.png"/>
+      <img width=250px class="BLENDER2 alt"="BLENDER2" src="src/img/BLENDER2.png"/>
+
+
+
+
     </section>
       
 
