--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg"/>
       <p>FRACCIONAMIENTO 'LAS ROSAS'</p>
       <p> Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
+      <button type="button">VER PROYECTO</button>
     </section>
     <section>
       <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png"/>
@@ -90,10 +91,6 @@
       <img width=250px class="AUTOCAD2 alt"="AUTOCAD2" src="src/img/AUTOCAD2.png"/>
       <img width=250px class="3DMAX2 alt"="3DMAX2" src="src/img/3DMAX2.png"/>
       <img width=250px class="BLENDER2 alt"="BLENDER2" src="src/img/BLENDER2.png"/>
-
-
-
-
     </section>
       
 
