--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My portfolio</title>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 
-    <!-- <meta name="author" content="Isaac Archundia" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+</head>
+<title>My portfolio</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<!-- <meta name="author" content="Isaac Archundia" />
     <meta name="description" content="Brief description" />
 
     <meta property="og:title" content="Your Page Title" />
@@ -15,89 +24,87 @@
     <meta property="og:url" content="/this-page.html" />
     <meta property="og:site_name" content="Your Site Name" /> -->
 
-    <link href="style.css" rel="stylesheet" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <!-- importar bootstrap  -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <!-- fin importacion bootstrap  -->
-  </head>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-      </div>
+<!-- importar bootstrap  -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- fin importacion bootstrap  -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-  <body>
-    <nav></nav>
-    <section>
-      <h1>¡HOLA! SOY ISAAC</h1>
-      <p>Estudiante de diseño de tercer año..</p>
-      <img src="/src/img/perfil.jpg"/> 
-    </section>
-    <section>
-      <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg"/>
-      <p>FRACCIONAMIENTO 'LAS ROSAS'</p>
-      <p> Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
-      <button type="button">VER PROYECTO</button>
-    </section>
-    <section>
-      <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png"/>
-      <p>TRABAJOS ANÁLOGOS</p>
-      <p> Grafito, tinta, pasteles, acrilicos y mas</p>
-    </section>
-    <section>
-      <img width=300px class="foto alt"="foto" src="src/img/foto.jpg"/>
-      <p> Soy estudiante de diseño en la Universidad Autonoma Metropolitana, unidad Cuajimalpa. Me gusta aprender cosas nuevas que puedan nutrirme de conocimiento.
- 
-        He estado aprendiendo mucho en diferentes software de diseño y me desempeño bien en creación de logos, marcas, identidades, así como el manejo de software CAD y maquinas CNC.</p>
-    </section>
-    <section>
-      <h2>HERRAMIENTAS QUE SÉ USAR</h2>
-      <p> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me considero hábil en todos los programas a los que he tenido acceso. </p>
-    </section>
-    <section> 
-      <img width=250px class="ILLUSTRATOR alt"="ILLUSTRATOR" src="src/img/ILLUSTRATOR.png"/>
-      <img width=250px class="PHOTOSHOP alt"="PHOTOSHOP" src="src/img/PHOTOSHOP.png"/>
-      <img width=250px class="ANIMATE alt"="ANIMATE" src="src/img/ANIMATE.png"/>
-      <img width=250px class="AUTOCAD2 alt"="AUTOCAD2" src="src/img/AUTOCAD2.png"/>
-      <img width=250px class="3DMAX2 alt"="3DMAX2" src="src/img/3DMAX2.png"/>
-      <img width=250px class="BLENDER2 alt"="BLENDER2" src="src/img/BLENDER2.png"/>
-    </section>
-      
+  </div>
+</nav>
+
+<body>
+  <nav></nav>
+  <section>
+
+    <body>
+      <h1 class="titulo">¡HOLA! SOY ISAAC</h1>
+    </body>
+    <p>Estudiante de diseño de tercer año..</p>
+    <img src="/src/img/perfil.jpg" />
+  </section>
+  <section>
+    <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
+    <p>FRACCIONAMIENTO 'LAS ROSAS'</p>
+    <p> Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
+    <button type="button">VER PROYECTO</button>
+  </section>
+  <section>
+    <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
+    <p>TRABAJOS ANÁLOGOS</p>
+    <p> Grafito, tinta, pasteles, acrilicos y mas</p>
+  </section>
+  <section>
+    <img width=300px class="foto alt"="foto" src="src/img/foto.jpg" />
+    <p> Soy estudiante de diseño en la Universidad Autonoma Metropolitana, unidad Cuajimalpa. Me gusta aprender cosas
+      nuevas que puedan nutrirme de conocimiento.
+
+      He estado aprendiendo mucho en diferentes software de diseño y me desempeño bien en creación de logos, marcas,
+      identidades, así como el manejo de software CAD y maquinas CNC.</p>
+  </section>
+  <section>
+    <h2>HERRAMIENTAS QUE SÉ USAR</h2>
+    <p> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me
+      considero hábil en todos los programas a los que he tenido acceso. </p>
+  </section>
+  <section>
+    <img width=250px class="ILLUSTRATOR alt"="ILLUSTRATOR" src="src/img/ILLUSTRATOR.png" />
+    <img width=250px class="PHOTOSHOP alt"="PHOTOSHOP" src="src/img/PHOTOSHOP.png" />
+    <img width=250px class="ANIMATE alt"="ANIMATE" src="src/img/ANIMATE.png" />
+    <img width=250px class="AUTOCAD2 alt"="AUTOCAD2" src="src/img/AUTOCAD2.png" />
+    <img width=250px class="3DMAX2 alt"="3DMAX2" src="src/img/3DMAX2.png" />
+    <img width=250px class="BLENDER2 alt"="BLENDER2" src="src/img/BLENDER2.png" />
+  </section>
 
 
 
 
 
-  </body>
+
+</body>
+
 </html>
-
