--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       identidades, así como el manejo de software CAD y maquinas CNC.</p>
   </section>
   <section>
-    <h2>HERRAMIENTAS QUE SÉ USAR</h2>
+    <h2 class="titulo2">HERRAMIENTAS QUE SÉ USAR</h2>
     <p> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me
       considero hábil en todos los programas a los que he tenido acceso. </p>
   </section>
