--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
 
     <body>
       <h1 class="titulo">¡HOLA! SOY ISAAC</h1>
-    </body>
-    <p>Estudiante de diseño de tercer año..</p>
+    <p>
+      Estudiante de diseño de tercer año..
+    </p>
+   </body>
     <img src="/src/img/perfil.jpg" />
   </section>
   <section>
