--- a/index.html
+++ b/index.html
@@ -58,26 +58,22 @@
 </nav>
 
 <body>
-  <nav></nav>
   <section>
-
     <body>
       <h1 class="titulo">¡HOLA! SOY ISAAC</h1>
-    <p>
-      Estudiante de diseño de tercer año..
-    </p>
-   </body>
+      <p>Estudiante de diseño de tercer año..</p>
+    </body>
     <img src="/src/img/perfil.jpg" />
   </section>
   <section>
     <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
-    <p>FRACCIONAMIENTO 'LAS ROSAS'</p>
+    <h3 class="subt">FRACCIONAMIENTO 'LAS ROSAS'</p>
     <p> Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
     <button type="button">VER PROYECTO</button>
   </section>
   <section>
     <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
-    <p>TRABAJOS ANÁLOGOS</p>
+    <h3 class="subt">TRABAJOS ANÁLOGOS</p>
     <p> Grafito, tinta, pasteles, acrilicos y mas</p>
   </section>
   <section>
