--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <title>My portfolio</title>
 <meta charset="utf-8" />
@@ -71,14 +76,16 @@
     <img src="/src/img/perfil.jpg" />
   </section>
   <section>
+    <body>
     <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
-    <h3 class="subt">FRACCIONAMIENTO 'LAS ROSAS'</p>
+    <h3 class="subt">FRACCIONAMIENTO 'LAS ROSAS'</h3>
     <p> Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
     <button type="button">VER PROYECTO</button>
+    </body>
   </section>
   <section>
     <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
-    <h3 class="subt">TRABAJOS ANÁLOGOS</p>
+    <h3 class="subt">TRABAJOS ANÁLOGOS</h3>
     <p> Grafito, tinta, pasteles, acrilicos y mas</p>
   </section>
   <section>
