cambios en el fondo y correción de clases

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <!-- fin importacion bootstrap  -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg" style="background-color: #292929;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Isaac Zaldivar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -54,24 +54,24 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Acerca de mi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Proyectos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link disabled" aria-disabled="true">Procesos</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<body>
+<body style="background-color: #b6a1a1;">
   <section>
     <body>
-      <h1 class="titulo">¡HOLA! SOY ISAAC</h1>
-      <p>Estudiante de diseño de tercer año..</p>
+      <h1 class="titulo1">¡HOLA! SOY ISAAC</h1>
+      <p class="parraosc">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
     </body>
     <img src="/src/img/perfil.jpg" />
   </section>
@@ -85,7 +85,7 @@
   </section>
   <section>
     <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
-    <h3 class="subt">TRABAJOS ANÁLOGOS</h3>
+    <h3 class="subt" style="color: #000000;">TRABAJOS ANÁLOGOS</h3>
     <p> Grafito, tinta, pasteles, acrilicos y mas</p>
   </section>
   <section>
@@ -99,15 +99,17 @@
   <section>
     <h2 class="titulo2">HERRAMIENTAS QUE SÉ USAR</h2>
     <p> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me
-      considero hábil en todos los programas a los que he tenido acceso. </p>
+      considero hábil en los programas a los que he tenido acceso. </p>
   </section>
   <section>
+    <div>
     <img width=250px class="ILLUSTRATOR alt"="ILLUSTRATOR" src="src/img/ILLUSTRATOR.png" />
     <img width=250px class="PHOTOSHOP alt"="PHOTOSHOP" src="src/img/PHOTOSHOP.png" />
     <img width=250px class="ANIMATE alt"="ANIMATE" src="src/img/ANIMATE.png" />
     <img width=250px class="AUTOCAD2 alt"="AUTOCAD2" src="src/img/AUTOCAD2.png" />
     <img width=250px class="3DMAX2 alt"="3DMAX2" src="src/img/3DMAX2.png" />
     <img width=250px class="BLENDER2 alt"="BLENDER2" src="src/img/BLENDER2.png" />
+    </div>
   </section>
 
 
