--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
   <section>
     <body>
       <h1 class="titulo1">¡HOLA! SOY ISAAC</h1>
-      <p class="parraosc">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
+      <p class="xxx">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
     </body>
     <img src="/src/img/perfil.jpg" />
   </section>
   <section>
     <body>
     <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
-    <h3 class="subt">FRACCIONAMIENTO 'LAS ROSAS'</h3>
-    <p> Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
+    <h3 class="subtosc">FRACCIONAMIENTO 'LAS ROSAS'</h3>
+    <p class="parraosc">Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
     <button type="button">VER PROYECTO</button>
     </body>
   </section>
