funcionalidad barra de nav y correcion de utf-8

--- a/proyectos.html
+++ b/proyectos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
 <meta charset="utf-8" />
@@ -23,7 +23,6 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <title>My portfolio</title>
-
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- <meta name="author" content="Isaac Archundia" />
@@ -57,7 +56,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link subti" aria-current="page" href="#">Home</a>
+          <a class="nav-link subti" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link subti" href="acerca.html">Acerca de mi</a>
@@ -72,30 +71,6 @@
     </div>
   </div>
 </nav>
-
-<body style="background-color: #292929;">
-  <section>
-    <body>
-      <h1 class="titulo1">¡HOLA! SOY ISAAC</h1>
-      <p class="parraosc">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
-    </body>
-    <img src="/src/img/perfil.jpg" />
-  </section>
-  <section>
-    <body>
-    <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
-    <h3 class="subtosc">FRACCIONAMIENTO 'LAS ROSAS'</h3>
-    <p class="parraosc">Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
-    <button type="button">VER PROYECTO</button>
-    </body>
-  </section>
-  <section>
-    <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
-    <h3 class="subtosc">TRABAJOS ANÁLOGOS</h3>
-    <p class="parraosc"> Grafito, tinta, pasteles, acrilicos y mas</p>
-  </section>
-
-
 
 
 
