--- a/acerca.html
+++ b/acerca.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
 <meta charset="utf-8" />
@@ -57,7 +57,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link subti" aria-current="page" href="#">Home</a>
+          <a class="nav-link subti" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link subti" href="acerca.html">Acerca de mi</a>
@@ -72,32 +72,30 @@
     </div>
   </div>
 </nav>
-
 <body style="background-color: #292929;">
-  <section>
-    <body>
-      <h1 class="titulo1">¡HOLA! SOY ISAAC</h1>
-      <p class="parraosc">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
-    </body>
-    <img src="/src/img/perfil.jpg" />
+<section>
+    <img width=300px class="foto alt"="foto" src="src/img/foto.jpg" />
+    <p class="parraosc">Soy estudiante de diseño en la Universidad Autonoma Metropolitana, unidad Cuajimalpa. Me gusta aprender cosas
+      nuevas que puedan nutrirme de conocimiento.
+
+      He estado aprendiendo mucho en diferentes software de diseño y me desempeño bien en creación de logos, marcas,
+      identidades, así como el manejo de software CAD y maquinas CNC.</p>
   </section>
   <section>
-    <body>
-    <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
-    <h3 class="subtosc">FRACCIONAMIENTO 'LAS ROSAS'</h3>
-    <p class="parraosc">Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
-    <button type="button">VER PROYECTO</button>
-    </body>
+    <h2 class="amatitulo">HERRAMIENTAS QUE SÉ USAR</h2>
+    <p class="parraosc"> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me
+      considero hábil en los programas a los que he tenido acceso. </p>
   </section>
   <section>
-    <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
-    <h3 class="subtosc">TRABAJOS ANÁLOGOS</h3>
-    <p class="parraosc"> Grafito, tinta, pasteles, acrilicos y mas</p>
+    <div>
+    <img width=250px class="ILLUSTRATOR alt"="ILLUSTRATOR" src="src/img/ILLUSTRATOR.png" />
+    <img width=250px class="PHOTOSHOP alt"="PHOTOSHOP" src="src/img/PHOTOSHOP.png" />
+    <img width=250px class="ANIMATE alt"="ANIMATE" src="src/img/ANIMATE.png" />
+    <img width=250px class="AUTOCAD2 alt"="AUTOCAD2" src="src/img/AUTOCAD2.png" />
+    <img width=250px class="3DMAX2 alt"="3DMAX2" src="src/img/3DMAX2.png" />
+    <img width=250px class="BLENDER2 alt"="BLENDER2" src="src/img/BLENDER2.png" />
+    </div>
   </section>
-
-
-
-
 
 </body>
 
