--- a/FRUTOSDEVIDA.html
+++ b/FRUTOSDEVIDA.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 <meta charset="utf-8" />
@@ -72,30 +72,27 @@
     </div>
   </div>
 </nav>
-<body style="background-color: #292929;">
-<section>
-    <img width=300px class="foto alt"="foto" src="src/img/foto.jpg" />
-    <p class="parraosc">Soy estudiante de diseño en la Universidad Autonoma Metropolitana, unidad Cuajimalpa. Me gusta aprender cosas
-      nuevas que puedan nutrirme de conocimiento.
 
-      He estado aprendiendo mucho en diferentes software de diseño y me desempeño bien en creación de logos, marcas,
-      identidades, así como el manejo de software CAD y maquinas CNC.</p>
-  </section>
-  <section>
-    <h2 class="amatitulo">HERRAMIENTAS QUE SÉ USAR</h2>
-    <p class="parraosc"> A lo largo de la carrera he utilizado varias herramientas para realizar proyectos escolares y personales. Me
-      considero hábil en los programas a los que he tenido acceso. </p>
-  </section>
-  <section>
-    <div>
-    <img width=250px class="ILLUSTRATOR alt"="ILLUSTRATOR" src="src/img/ILLUSTRATOR.png" />
-    <img width=250px class="PHOTOSHOP alt"="PHOTOSHOP" src="src/img/PHOTOSHOP.png" />
-    <img width=250px class="ANIMATE alt"="ANIMATE" src="src/img/ANIMATE.png" />
-    <img width=250px class="AUTOCAD2 alt"="AUTOCAD2" src="src/img/AUTOCAD2.png" />
-    <img width=250px class="3DMAX2 alt"="3DMAX2" src="src/img/3DMAX2.png" />
-    <img width=250px class="BLENDER2 alt"="BLENDER2" src="src/img/BLENDER2.png" />
-    </div>
-  </section>
+<section>
+  <body>
+    <img class="render alt"="render src="taller3d/render.jpg" />
+    <img class="1 alt"="1 src="taller3d/1.jpg"/>
+    <img class="2 alt"="2 src="taller3d/2.jpg"/>
+    <img class="5 alt"="5 src="taller3d/5.jpg"/>
+    <img class="3 alt"="3 src="taller3d/3.jpg"/>
+    <img class="4 alt"="4 src="taller3d/4.jpg"/>
+    <img class="e4 alt"="e4 src="taller3d/e4.jpg"/>
+    <img class="e1 alt"="e1 src="taller3d/e1.jpg"/>
+    <img class="e2 alt"="e2 src="taller3d/e2.jpg"/>
+    <img class="e3 alt"="e3 src="taller3d/e3.jpg"/>
+    <img class="cartel alt"="cartel src="taller3d/cartel.jpg"/>
+
+    </body>
+</section>
+
+
+
+
 
 </body>
 
