--- a/proyectos.html
+++ b/proyectos.html
@@ -44,7 +44,7 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
   <div class="container-fluid">
 
-    <a class="navbar-brand logo" href="#">
+    <a class="navbar-brand logo" href="index.html">
       <p class="subt">Isaac Zaldivar</p>
 
 
@@ -72,7 +72,11 @@
   </div>
 </nav>
 
+<a href="FRUTOSDEVIDA.html">
+    <img width=500px class="3 alt"="3" src="taller3d/3.jpg" />
+</a>
 
+    
 
 </body>
 
