pagina "lampara de html" imagenes

--- a/FRUTOSDEVIDA.html
+++ b/FRUTOSDEVIDA.html
@@ -73,6 +73,14 @@
   </div>
 </nav>
 
+<body style="background-color: #292929;">
+  <section>
+    <body>
+      <h1 class="protitulo">FRUTOS DE VIDA</h1>
+
+      
+    </body>
+
 <section>
   <body>
     <img class="render alt"="render src="taller3d/render.jpg" />
