--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -23,7 +23,6 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <title>My portfolio</title>
-
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- <meta name="author" content="Isaac Archundia" />
@@ -45,7 +44,7 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #292929;">
   <div class="container-fluid">
 
-    <a class="navbar-brand logo" href="#">
+    <a class="navbar-brand logo" href="index.html">
       <p class="subt">Isaac Zaldivar</p>
 
 
@@ -57,7 +56,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link subti" aria-current="page" href="#">Home</a>
+          <a class="nav-link subti" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link subti" href="acerca.html">Acerca de mi</a>
@@ -73,28 +72,46 @@
   </div>
 </nav>
 
-<body style="background-color: #292929;">
-  <section>
+<section>
     <body>
-      <h1 class="titulo1">¡HOLA! SOY ISAAC</h1>
-      <p class="parraosc">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
+        <h1 class="protitulo">LAMPARA</h1>
+        <h3 class= "subtrojo"> PROYECTO 5-TO TRIMESTRE</h3>
+        <h3 class="subtrojo">TALLER DE PROCESOS Y TECNOLOGIAS PARA LA PRODUCCIÓN DE MODELOS, PROTOTIPOS Y ORIGINALES</h3>
     </body>
-    <img src="/src/img/perfil.jpg" />
-  </section>
-  <section>
-    <body>
-    <img width=500px class="maqueta alt"="maqueta" src="src/img/maqueta.jpg" />
-    <h3 class="subtosc">FRACCIONAMIENTO 'LAS ROSAS'</h3>
-    <p class="parraosc">Proyecto realizado en equipo en la materia de Laboratorio de diseño Integral de Información en los Espacios.</p>
-    <button type="button">VER PROYECTO</button>
-    </body>
-  </section>
-  <section>
-    <img width=400px class="analogos alt"="analogos" src="src/img/analogos.png" />
-    <img class="Inter(2) alt"="Inter(2)" src="src/img/Inter(2).jpg" />
-    <h3 class="subtosc">TRABAJOS ANÁLOGOS</h3>
-    <p class="parraosc"> Grafito, tinta, pasteles, acrilicos y mas</p>
-  </section>
+</section>
+<section>
+<div class="centro">
+<div class="imglamp">
+  <div>
+    <img width="452" class="DEMA1 alt"="DEMA1" src="src/img/lamparas/DEMA1.jpg">
+  </div>
+  <div class="imglampdema">
+    <img width="452" class="DEMA2 alt"="DEMA2" src="src/img/lamparas/DEMA2.jpg">
+    <img width="452" class="DEMA3 alt"="DEMA1" src="src/img/lamparas/DEMA3.jpg">
+  </div>
+</div>
+</div> 
+
+
+  <img class="DEMA4 alt"="DEMA1" src="src/img/lamparas/DEMA4.jpg">
+</section>
+<section>
+  <img class="TRENCH1 alt"="TRENCH1" src="src/img/lamparas/TRENCH1.jpg">
+  <img class="TRENCH2 alt"="TRENCH2" src="src/img/lamparas/TRENCH2.jpg">
+  <img class="TRENCH3 alt"="TRENCH3" src="src/img/lamparas/TRENCHE3.jpg">
+</section>
+<section>
+  <img class="BLU1 alt"="BLU1" src="src/img/lamparas/BLU1.jpg">
+  <img class="BLU2 alt"="BLU2" src="src/img/lamparas/BLU2.jpg">
+  <img class="BLU3 alt"="BLU3" src="src/img/lamparas/BLU3.jpg">
+</section>
+<section>
+  <img class="ADEMA1 alt"="ADEMA1" src="src/img/lamparas/ADEMA1.jpg">
+  <img class="ADEMA2 alt"="ADEMA2" src="src/img/lamparas/ADEMA2.jpg">
+  <img class="ADEMA3 alt"="ADEMA3" src="src/img/lamparas/ADEMA3.jpg">
+</section>
+
+
 
 
 
