--- a/TALLERDEIMAGEN.HTML
+++ b/TALLERDEIMAGEN.HTML
@@ -72,10 +72,48 @@
   </div>
 </nav>
 
-
-
-
-
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="src/img/carrusel/recorrido1.jpg" class="d-block w-100" alt="recorrido1">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido2.jpg" class="d-block w-100" alt="recorrido2">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido3.jpg" class="d-block w-100" alt="recorrido3">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido4.jpg" class="d-block w-100" alt="recorrido4">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido5.jpg" class="d-block w-100" alt="recorrido5">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido6.jpg" class="d-block w-100" alt="recorrido6">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido7.jpg" class="d-block w-100" alt="recorrido7">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido8.jpg" class="d-block w-100" alt="recorrido8">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido9.jpg" class="d-block w-100" alt="recorrido9">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/recorrido10.jpg" class="d-block w-100" alt="recorrido10">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
 
 
