--- a/proyectos.html
+++ b/proyectos.html
@@ -75,8 +75,12 @@
 <a href="FRUTOSDEVIDA.html">
     <img width=500px class="3 alt"="3" src="taller3d/3.jpg" />
 </a>
-
-    
+<a href="TALLERDEIMAGEN.HTML">
+  <img width=500px class="proyecto alt"="proyecto" src="src/img/carrusel/1-16.jpg" />
+</a>
+<a href="LAMPARA.HTML">
+  <img width=500px class="proyecto alt"="proyecto" src="src/img/lamparas/ABLU1.jpg" />
+</a>
 
 </body>
 
