--- a/FRUTOSDEVIDA.html
+++ b/FRUTOSDEVIDA.html
@@ -78,15 +78,16 @@
     <body>
       <h1 class="protitulo">FRUTOS DE VIDA</h1>
 
-      
     </body>
 
 <section>
   <body>
     <img class="render alt"="render src="taller3d/render.jpg" />
     <img class="1 alt"="1 src="taller3d/1.jpg"/>
+  <div>
     <img class="2 alt"="2 src="taller3d/2.jpg"/>
     <img class="5 alt"="5 src="taller3d/5.jpg"/>
+  </div>
     <img class="3 alt"="3 src="taller3d/3.jpg"/>
     <img class="4 alt"="4 src="taller3d/4.jpg"/>
     <img class="e4 alt"="e4 src="taller3d/e4.jpg"/>
