--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -79,27 +79,29 @@
         <h3 class="subtrojo">TALLER DE PROCESOS Y TECNOLOGIAS PARA LA PRODUCCIÓN DE MODELOS, PROTOTIPOS Y ORIGINALES</h3>
     </body>
 </section>
+
 <section>
 <div class="centro">
-<div class="imglamp">
-  <div>
-    <img width="452" class="DEMA1 alt"="DEMA1" src="src/img/lamparas/DEMA1.jpg">
+  <div class="imglamprow">
+    <div>
+      <img width="452" class="DEMA1 alt"="DEMA1" src="src/img/lamparas/DEMA1.jpg">
+    </div>
+    <div class="imglampcolum">
+      <img width="452" class="DEMA2 alt"="DEMA2" src="src/img/lamparas/DEMA2.jpg">
+      <img width="452" class="DEMA3 alt"="DEMA1" src="src/img/lamparas/DEMA3.jpg">
+    </div>
   </div>
-  <div class="imglampdema">
-    <img width="452" class="DEMA2 alt"="DEMA2" src="src/img/lamparas/DEMA2.jpg">
-    <img width="452" class="DEMA3 alt"="DEMA1" src="src/img/lamparas/DEMA3.jpg">
-  </div>
-</div>
 </div> 
-
-
-  <img class="DEMA4 alt"="DEMA1" src="src/img/lamparas/DEMA4.jpg">
+  <img width="930" class="DEMA4 alt"="DEMA4" src="src/img/lamparas/DEMA4.jpg">
 </section>
+
 <section>
-  <img class="TRENCH1 alt"="TRENCH1" src="src/img/lamparas/TRENCH1.jpg">
-  <img class="TRENCH2 alt"="TRENCH2" src="src/img/lamparas/TRENCH2.jpg">
-  <img class="TRENCH3 alt"="TRENCH3" src="src/img/lamparas/TRENCHE3.jpg">
-</section>
+  <div class="imglamprow">
+    <img width="572" class="TRENCH1 alt"="TRENCH1" src="src/img/lamparas/TRENCH1.jpg">
+    <img width="338" class="TRENCH2 alt"="TRENCH2" src="src/img/lamparas/TRENCH2.jpg">
+  </div>
+  <img width="692" class="TRENCH3 alt"="TRENCH3" src="src/img/lamparas/TRENCHE3.jpg">
+</section
 <section>
   <img class="BLU1 alt"="BLU1" src="src/img/lamparas/BLU1.jpg">
   <img class="BLU2 alt"="BLU2" src="src/img/lamparas/BLU2.jpg">
