--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -101,11 +101,13 @@
     <img width="338" class="TRENCH2 alt"="TRENCH2" src="src/img/lamparas/TRENCH2.jpg">
   </div>
   <img width="692" class="TRENCH3 alt"="TRENCH3" src="src/img/lamparas/TRENCHE3.jpg">
-</section
+</section>
 <section>
-  <img class="BLU1 alt"="BLU1" src="src/img/lamparas/BLU1.jpg">
-  <img class="BLU2 alt"="BLU2" src="src/img/lamparas/BLU2.jpg">
-  <img class="BLU3 alt"="BLU3" src="src/img/lamparas/BLU3.jpg">
+  <div class="imglamprow">
+    <img width="334" class="BLU1 alt"="BLU1" src="src/img/lamparas/BLU1.jpg">
+    <img width="572" class="BLU2 alt"="BLU2" src="src/img/lamparas/BLU2.jpg">
+  </div>
+  <img width="" class="BLU3 alt"="BLU3" src="src/img/lamparas/BLU3.jpg">
 </section>
 <section>
   <img class="ADEMA1 alt"="ADEMA1" src="src/img/lamparas/ADEMA1.jpg">
