diseño responsivo columnas lampara

--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -79,12 +79,38 @@
         <h3 class="subtrojo">TALLER DE PROCESOS Y TECNOLOGIAS PARA LA PRODUCCIÓN DE MODELOS, PROTOTIPOS Y ORIGINALES</h3>
     </body>
 </section>
+<!--
+<div class="container">
+  <div class="row centro">
+    <div>
+        <img class="DEMA1 alt col-4"="DEMA1" src="src/img/lamparas/DEMA1.jpg">
+      </div>
+      <div class="column">
+        <img class="DEMA2 alt col-4"= "DEMA2" src="src/img/lamparas/DEMA2.jpg">
+        <img class="DEMA3 alt col-4"="DEMA1" src="src/img/lamparas/DEMA3.jpg">
+   </div>
+  </div>
+</div>
+-->
+
 
 <section class="container">
-<div class="centro">
-  <div class="imglamprow">
-    <div>
-      <img width="452" class="DEMA1 alt"="DEMA1" src="src/img/lamparas/DEMA1.jpg">
+  <div class="row centro">
+    <div class="col-12 col-md-4">
+      <img src="src/img/lamparas/DEMA1.jpg" class="img-fluid mb-4 alt=DEMA1">
+    </div>
+    <div class="col-12 col-md-4 flex column">
+      <img src="src/img/lamparas/DEMA2.jpg" class="img-fluid mb-4 alt=DEMA2">
+      <img src="src/img/lamparas/DEMA3.jpg" class="img-fluid alt=DEMA3">
+    </div>
+  </div>
+</section>
+<!--
+<section>
+<div class="container">
+  <div class="row">
+    <div col-6>
+      <img col-6 class="DEMA1 alt"="DEMA1" src="src/img/lamparas/DEMA1.jpg">
     </div>
     <div class="imglampcolum">
       <img width="452" class="DEMA2 alt"="DEMA2" src="src/img/lamparas/DEMA2.jpg">
@@ -114,7 +140,7 @@
   <img class="ADEMA2 alt"="ADEMA2" src="src/img/lamparas/ADEMA2.jpg">
   <img class="ADEMA3 alt"="ADEMA3" src="src/img/lamparas/ADEMA3.jpg">
 </section>
-
+-->
 
 
 
