--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -72,79 +72,35 @@
   </div>
 </nav>
 
-<section>
-    <body>
-        <h1 class="protitulo">LAMPARA</h1>
-        <h3 class= "subtrojo"> PROYECTO 5-TO TRIMESTRE</h3>
-        <h3 class="subtrojo">TALLER DE PROCESOS Y TECNOLOGIAS PARA LA PRODUCCIÓN DE MODELOS, PROTOTIPOS Y ORIGINALES</h3>
-    </body>
-</section>
-<!--
-<div class="container">
-  <div class="row centro">
-    <div>
-        <img class="DEMA1 alt col-4"="DEMA1" src="src/img/lamparas/DEMA1.jpg">
-      </div>
-      <div class="column">
-        <img class="DEMA2 alt col-4"= "DEMA2" src="src/img/lamparas/DEMA2.jpg">
-        <img class="DEMA3 alt col-4"="DEMA1" src="src/img/lamparas/DEMA3.jpg">
-   </div>
-  </div>
-</div>
--->
-
-
-<section class="container">
-  <div class="row centro">
-    <div class="col-12 col-md-4">
-      <img src="src/img/lamparas/DEMA1.jpg" class="img-fluid mb-4 alt=DEMA1">
-    </div>
-    <div class="col-12 col-md-4 flex column">
-      <img src="src/img/lamparas/DEMA2.jpg" class="img-fluid mb-4 alt=DEMA2">
-      <img src="src/img/lamparas/DEMA3.jpg" class="img-fluid alt=DEMA3">
-    </div>
-  </div>
-</section>
-<!--
-<section>
-<div class="container">
+<section class="container justify-content-start mb-5 mt-5">
   <div class="row">
-    <div col-6>
-      <img col-6 class="DEMA1 alt"="DEMA1" src="src/img/lamparas/DEMA1.jpg">
+    <div>
+      <h1 class="protitulo col-sm-6 col-lg-4">LAMPARA</h1>
+      <h3 class= "subtrojo col-sm-2 col-md-4"> PROYECTO 5-TO TRIMESTRE</h3>
     </div>
-    <div class="imglampcolum">
-      <img width="452" class="DEMA2 alt"="DEMA2" src="src/img/lamparas/DEMA2.jpg">
-      <img width="452" class="DEMA3 alt"="DEMA1" src="src/img/lamparas/DEMA3.jpg">
+    <div class="col-8 col-md-4 offset-md-6">
+      <h3 class="subtrojo text-md-end text-center">
+        TALLER DE PROCESOS Y TECNOLOGIAS PARA LA <br>
+        PRODUCCIÓN DE MODELOS, PROTOTIPOS Y<br>
+        ORIGINALES</h3>
+    </div> 
+  </div>
+</section>
+
+<section class="container justify-content-start mt-6">
+  <div class="row justify-content-start">
+    <div class="col-sm-12 col-md-4 col-lg-6">
+      <img src="src/img/lamparas/DEMA1.jpg" class="img-fluid mb-3 mt-6 alt=DEMA1">
+    </div>
+    <div class="col-sm-12 col-md-4 col-lg-6 flex column">
+      <img src="src/img/lamparas/DEMA2.jpg" class="img-fluid mb-4 mt-6 alt=DEMA2">
+      <img src="src/img/lamparas/DEMA3.jpg" class="img-fluid mb-4 alt=DEMA3">
+    </div>
+    <div class="col-sm-12 col-md-8 col-lg-12">
+      <img src="src/img/lamparas/DEMA4.jpg" class="img-fluid alt=DEMA4">
     </div>
   </div>
-</div> 
-  <img width="930" class="DEMA4 alt"="DEMA4" src="src/img/lamparas/DEMA4.jpg">
 </section>
-
-<section>
-  <div class="imglamprow">
-    <img width="572" class="TRENCH1 alt"="TRENCH1" src="src/img/lamparas/TRENCH1.jpg">
-    <img width="338" class="TRENCH2 alt"="TRENCH2" src="src/img/lamparas/TRENCH2.jpg">
-  </div>
-  <img width="692" class="TRENCH3 alt"="TRENCH3" src="src/img/lamparas/TRENCHE3.jpg">
-</section>
-<section>
-  <div class="imglamprow">
-    <img width="334" class="BLU1 alt"="BLU1" src="src/img/lamparas/BLU1.jpg">
-    <img width="572" class="BLU2 alt"="BLU2" src="src/img/lamparas/BLU2.jpg">
-  </div>
-  <img width="" class="BLU3 alt"="BLU3" src="src/img/lamparas/BLU3.jpg">
-</section>
-<section>
-  <img class="ADEMA1 alt"="ADEMA1" src="src/img/lamparas/ADEMA1.jpg">
-  <img class="ADEMA2 alt"="ADEMA2" src="src/img/lamparas/ADEMA2.jpg">
-  <img class="ADEMA3 alt"="ADEMA3" src="src/img/lamparas/ADEMA3.jpg">
-</section>
--->
-
-
-
-
 
 
 </body>
