--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
 
 <body style="background-color: #292929;">
   <section>
-    <body>
-      <h1 class="titulo1">¡HOLA! SOY ISAAC</h1>
-      <p class="parraosc">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
-    </body>
+      <div class="container justify-content-start">
+        <div class="column">
+        <h1 class="titulo1">
+        ¡HOLA! <br>
+        SOY ISAAC</h1>
+        <p class="parraosc">Estudiante de diseño de tercer año en la UAM Cuajimalpa. </p>
+        </div>
+      </div>
     <img src="/src/img/perfil.jpg" />
   </section>
   <section>
