probelmas con el tamaño 768-992

--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -75,13 +75,13 @@
 <section class="container justify-content-start mb-5 mt-5">
   <div class="row">
     <div>
-      <h1 class="protitulo col-sm-6 col-lg-4">LAMPARA</h1>
+      <h1 class="protitulo">LAMPARA</h1>
       <h3 class= "subtrojo col-sm-2 col-md-4"> PROYECTO 5-TO TRIMESTRE</h3>
     </div>
-    <div class="col-8 col-md-4 offset-md-6">
-      <h3 class="subtrojo text-md-end text-center">
-        TALLER DE PROCESOS Y TECNOLOGIAS PARA LA <br>
-        PRODUCCIÓN DE MODELOS, PROTOTIPOS Y<br>
+    <div class="col-sm-12 col-md-4 offset-md-8">
+      <h3 class="subtrojo text-md-end text-right">
+        TALLER DE PROCESOS Y TECNOLOGIAS PARA LA 
+        PRODUCCIÓN DE MODELOS, PROTOTIPOS Y
         ORIGINALES</h3>
     </div> 
   </div>
