acomodo de frutos de vida

--- a/FRUTOSDEVIDA.html
+++ b/FRUTOSDEVIDA.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x <!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -74,30 +74,33 @@
 </nav>
 
 <body style="background-color: #292929;">
-  <section>
-    <body>
-      <h1 class="protitulo">FRUTOS DE VIDA</h1>
-
-    </body>
-
-<section>
-  <body>
-    <img class="render alt"="render src="taller3d/render.jpg" />
-    <img class="1 alt"="1 src="taller3d/1.jpg"/>
-  <div>
-    <img class="2 alt"="2 src="taller3d/2.jpg"/>
-    <img class="5 alt"="5 src="taller3d/5.jpg"/>
-  </div>
-    <img class="3 alt"="3 src="taller3d/3.jpg"/>
-    <img class="4 alt"="4 src="taller3d/4.jpg"/>
-    <img class="e4 alt"="e4 src="taller3d/e4.jpg"/>
-    <img class="e1 alt"="e1 src="taller3d/e1.jpg"/>
-    <img class="e2 alt"="e2 src="taller3d/e2.jpg"/>
-    <img class="e3 alt"="e3 src="taller3d/e3.jpg"/>
-    <img class="cartel alt"="cartel src="taller3d/cartel.jpg"/>
-
-    </body>
-</section>
+  <section class="container justify-content-start mb-5 mt-5">
+    <div class="row">
+      <div>
+        <h1 class="protitulo">FRUTOS DE VIDA</h1>
+        <h3 class= "subtosc"> PROYECTO 6-TO TRIMESTRE</h3>
+      </div>
+      <div class="col-sm-12 col-md-4 offset-md-8 offset-sm-0 offset-lg-8">
+        <h3 class="subtosc text-md-end text-left">
+          TALLER DE REPRESENTACIÓN Y EXPRESION DIGITAL TRIDIMENSIONAL</h3>
+      </div> 
+    </div>
+    <div>
+      <p class="parraosc col-6 col-lg-6 mb-5 mt-6">El objetivo general del trabajo era desarrollar un diseño innovador de una botella de  vidrio que represente la nueva imagen de “Frutos de Vida”, contemplando 3 sabores diferentes, y se rediseñaron las etiquetas a partir de la identidad de la marca.</p>
+    </div>
+  </section>
+  <section class="container">
+    <div class="col-lg-8 row justify-content-start">
+      <img src="taller3d/1.jpg" class= "alt=1">
+      <img src="taller3d/3.jpg" class= "alt=3">
+    </div>
+    <div class="col-lg-4 d-flex row justify-content-end flex column">
+      <img src="taller3d/5.jpg" class="alt=5">
+      <img src="taller3d/2.jpg" class="alt=2">
+      <img src="taller3d/e4.jpg" class="alt=e4">
+    </div>
+   
+  </section>
 
 
 
