--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -76,12 +76,12 @@
   <div class="row">
     <div>
       <h1 class="protitulo">LAMPARA</h1>
-      <h3 class= "subtrojo col-sm-2 col-md-4"> PROYECTO 5-TO TRIMESTRE</h3>
+      <h3 class= "subtrojo"> PROYECTO 5-TO TRIMESTRE</h3>
     </div>
-    <div class="col-sm-12 col-md-4 offset-md-8">
-      <h3 class="subtrojo text-md-end text-right">
-        TALLER DE PROCESOS Y TECNOLOGIAS PARA LA 
-        PRODUCCIÓN DE MODELOS, PROTOTIPOS Y
+    <div class="col-sm-12 col-md-4 offset-md-8 offset-sm-0 offset-lg-8">
+      <h3 class="subtrojo text-md-end text-left">
+        TALLER DE PROCESOS Y TECNOLOGIAS PARA LA<br> 
+        PRODUCCIÓN DE MODELOS, PROTOTIPOS Y<br>
         ORIGINALES</h3>
     </div> 
   </div>
@@ -89,10 +89,10 @@
 
 <section class="container justify-content-start mt-6">
   <div class="row justify-content-start">
-    <div class="col-sm-12 col-md-4 col-lg-6">
+    <div class="col-6 col-lg-6">
       <img src="src/img/lamparas/DEMA1.jpg" class="img-fluid mb-3 mt-6 alt=DEMA1">
     </div>
-    <div class="col-sm-12 col-md-4 col-lg-6 flex column">
+    <div class="col-6 col-lg-6 flex column">
       <img src="src/img/lamparas/DEMA2.jpg" class="img-fluid mb-4 mt-6 alt=DEMA2">
       <img src="src/img/lamparas/DEMA3.jpg" class="img-fluid mb-4 alt=DEMA3">
     </div>
