agregué mas imagenes y color de fondo

--- a/FRUTOSDEVIDA.html
+++ b/FRUTOSDEVIDA.html
@@ -86,22 +86,71 @@ x <!DOCTYPE html>
       </div> 
     </div>
     <div>
-      <p class="parraosc col-6 col-lg-6 mb-5 mt-6">El objetivo general del trabajo era desarrollar un diseño innovador de una botella de  vidrio que represente la nueva imagen de “Frutos de Vida”, contemplando 3 sabores diferentes, y se rediseñaron las etiquetas a partir de la identidad de la marca.</p>
+      <p class="parraosc col-6 col-lg-7 my-5">El objetivo general del trabajo era desarrollar un diseño innovador de una botella de  vidrio que represente la nueva imagen de “Frutos de Vida”, contemplando 3 sabores diferentes, y se rediseñaron las etiquetas a partir de la identidad de la marca.</p>
+      <br>
     </div>
-  </section>
-  <section class="container">
-    <div class="col-lg-8 row justify-content-start">
-      <img src="taller3d/1.jpg" class= "alt=1">
-      <img src="taller3d/3.jpg" class= "alt=3">
-    </div>
-    <div class="col-lg-4 d-flex row justify-content-end flex column">
-      <img src="taller3d/5.jpg" class="alt=5">
-      <img src="taller3d/2.jpg" class="alt=2">
-      <img src="taller3d/e4.jpg" class="alt=e4">
-    </div>
-   
   </section>
 
+  <div class="container">
+    <h2 class="amatitulo2 d-flex flex-row-reverse">RENDERS</h2>
+  </div>
+
+  <section class="container justify-content-start mt-5">
+    <div class="row">
+      <div class="col-lg-7">
+        <img src="taller3d/1.jpg" class="img-fluid mb-4" alt="1">
+        <img src="taller3d/3.jpg" class= "img-fluid mb-4" alt="3">
+      </div>
+      <div class="col-lg-5 d-flex flex-column">
+        <img src="taller3d/5.jpg" class="img-fluid mb-4 mt-6 alt=5">
+        <img src="taller3d/2.jpg" class="img-fluid mb-4 alt=2">
+        <img src="taller3d/e4.jpg" class="img-fluid alt=e4">
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container col-lg-12 my-5">
+      <img src="taller3d/4.jpg" class="img-fluid col-lg-12" alt="4">
+    </div>
+  </section>
+  <br>
+  <div class="container my-5">
+    <h2 class="amatitulo2 d-flex flex-row-reverse">ETIQUETAS</h2>
+  </div>
+
+  <section class="container-fluid">
+    <div class="row">
+      <img src="taller3d/e1.jpg" class="img-fluid col-lg-4" alt="etiqueta1">
+      <img src="taller3d/e2.jpg" class="img-fluid col-lg-4" alt="etiqueta2">
+      <img src="taller3d/e3.jpg" class="img-fluid col-lg-4" alt="etiqueta3">
+    </div>
+  </section>
+
+  <section class="cajacolor py-5">
+    <div class="container">
+      <h2 class="amatitulo2 text-end mb-4">CARTEL</h2>
+      <div class="row">
+        <div class="col-12">
+          <img src="taller3d/cartel.jpg" alt="cartel" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--
+  <section class="container">
+    <div class="row">
+      <div class="col-lg-8">
+       <img src="taller3d/1.jpg" class="img-fluid mb-3 alt=1">
+       <img src="taller3d/3.jpg" class= "img-fluid mb-3 alt=3">
+      </div>
+      <div class="col-lg-4 d-flex flex-column">
+        <img src="taller3d/5.jpg" class="img-fluid alt=5">
+        <img src="taller3d/2.jpg" class="img-fluid alt=2">
+        <img src="taller3d/e4.jpg" class="img-fluid alt=e4">
+      </div>
+    </div>
+  </section>
+-->
 
 
 
