pagina Frutos de vida terminada con responsivo

--- a/FRUTOSDEVIDA.html
+++ b/FRUTOSDEVIDA.html
@@ -74,6 +74,9 @@ x <!DOCTYPE html>
 </nav>
 
 <body style="background-color: #292929;">
+  <section class="portada">
+    <img src="taller3d/render.jpg" alt="Portada" class="img-portada">
+  </section>
   <section class="container justify-content-start mb-5 mt-5">
     <div class="row">
       <div>
@@ -86,10 +89,12 @@ x <!DOCTYPE html>
       </div> 
     </div>
     <div>
-      <p class="parraosc col-6 col-lg-7 my-5">El objetivo general del trabajo era desarrollar un diseño innovador de una botella de  vidrio que represente la nueva imagen de “Frutos de Vida”, contemplando 3 sabores diferentes, y se rediseñaron las etiquetas a partir de la identidad de la marca.</p>
+      <p class="parraosc col-12 col-lg-7 my-5">El objetivo general del trabajo era desarrollar un diseño innovador de una botella de  vidrio que represente la nueva imagen de “Frutos de Vida”, contemplando 3 sabores diferentes, y se rediseñaron las etiquetas a partir de la identidad de la marca.</p>
       <br>
     </div>
   </section>
+
+  <br>
 
   <div class="container">
     <h2 class="amatitulo2 d-flex flex-row-reverse">RENDERS</h2>
@@ -110,7 +115,7 @@ x <!DOCTYPE html>
   </section>
   <section>
     <div class="container col-lg-12 my-5">
-      <img src="taller3d/4.jpg" class="img-fluid col-lg-12" alt="4">
+      <img src="taller3d/4.jpg" class="img-fluid mb-5 col-lg-12" alt="4">
     </div>
   </section>
   <br>
@@ -118,21 +123,33 @@ x <!DOCTYPE html>
     <h2 class="amatitulo2 d-flex flex-row-reverse">ETIQUETAS</h2>
   </div>
 
-  <section class="container-fluid">
+  <section class="container-fluid my-5">
     <div class="row">
-      <img src="taller3d/e1.jpg" class="img-fluid col-lg-4" alt="etiqueta1">
-      <img src="taller3d/e2.jpg" class="img-fluid col-lg-4" alt="etiqueta2">
-      <img src="taller3d/e3.jpg" class="img-fluid col-lg-4" alt="etiqueta3">
+      <img src="taller3d/e1.jpg" class="img-fluid mb-5 col-lg-4" alt="etiqueta1">
+      <img src="taller3d/e2.jpg" class="img-fluid mb-5 col-lg-4" alt="etiqueta2">
+      <img src="taller3d/e3.jpg" class="img-fluid mb-5 col-lg-4" alt="etiqueta3">
     </div>
   </section>
 
-  <section class="cajacolor py-5">
+  <br>
+
+  <section class="cajacolor my-5 py-5">
     <div class="container">
-      <h2 class="amatitulo2 text-end mb-4">CARTEL</h2>
-      <div class="row">
-        <div class="col-12">
-          <img src="taller3d/cartel.jpg" alt="cartel" class="img-fluid">
-        </div>
+      <h2 class="titulo2 text-end my-5">CARTEL</h2>
+      <div class="col-12 col-lg-12 centro">
+        <img src="taller3d/cartel.jpg" alt="cartel" class="img-fluid mb-5">
+      </div>
+    </div>
+  </section> 
+
+  <section class="my-5 py-5">
+    <div class="container">
+      <h2 class="d-flex flex-row-reverse amatitulo2">HERRAMIENTAS</h2> 
+    </div>
+    <div class="container">
+      <div class="justify-content-center row">
+        <img src="src/herramientas/3DMAX.png" class="col-lg-2 col-4 my-5" alt="3DMAX">
+        <img src="src/herramientas/AUTOCAD.png" class="col-lg-2 col-4 my-5" alt="AUTOCAD">
       </div>
     </div>
   </section>
