--- a/TALLERDEIMAGEN.HTML
+++ b/TALLERDEIMAGEN.HTML
@@ -72,37 +72,83 @@
   </div>
 </nav>
 
+<body style="background-color: #f3f1f1">
+<section class="cajacolor2 mb-5 py-5">
+  <div class="container">
+    <div class="column justify-content-center col-12 col-lg-10">
+      <img src="src/img/carrusel/portada_Mesa de trabajo 1.jpg" alt="portada" class="my-5">
+    </div>
+    <br>
+    <br>
+  </div>
+</section>
+<section class="container justify-content-start mb-5 mt-5">
+  <div class="row">
+    <div>
+      <h1 class="protitulo">RECORRIDO<br>
+      VISUAL</h1>
+      <h3 class= "subt"> PROYECTO 3-TO TRIMESTRE</h3>
+    </div>
+    <div class="col-sm-12 col-md-4 offset-md-8 offset-sm-0 offset-lg-8">
+      <h3 class="subt text-md-end text-left">
+        TALLER DE IMAGEN Y COMUNICACIÓN VISUAL</h3>
+    </div> 
+  </div>
+  <div>
+    <p class="parra col-12 col-lg-7 my-5">Este fue uno de los proyectos que mas me gusto y mas tiempo he invertido. Se trata de una serie de imagenes (40) elegidas para contar una historia. Fue trabajado en herramientas como Photoshop e Illustrator. Fue de mis primeros trabajos sobre una reticula pensada y fue lo que me impulso a buscar e interesarme por el diseño editorial.</p>
+    <br>
+  </div>
+</section>
+
+<div class="container mt-5">
+  <h2 class="titulo2 d-flex flex-row-reverse">CARRUSEL</h2>
+</div>
+
+<section class="container mb-5 py-5">
+<div class="col-lg-12">
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="src/img/carrusel/recorrido1.jpg" class="d-block w-100" alt="recorrido1">
+      <img src="src/img/carrusel/15.jpg" class="d-block w-100" alt="recorrido1">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido2.jpg" class="d-block w-100" alt="recorrido2">
+      <img src="src/img/carrusel/16.jpg" class="d-block w-100" alt="recorrido2">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido3.jpg" class="d-block w-100" alt="recorrido3">
+      <img src="src/img/carrusel/18.jpg" class="d-block w-100" alt="recorrido3">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido4.jpg" class="d-block w-100" alt="recorrido4">
+      <img src="src/img/carrusel/19.jpg" class="d-block w-100" alt="recorrido4">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido5.jpg" class="d-block w-100" alt="recorrido5">
+      <img src="src/img/carrusel/20.jpg" class="d-block w-100" alt="recorrido5">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido6.jpg" class="d-block w-100" alt="recorrido6">
+      <img src="src/img/carrusel/21.jpg" class="d-block w-100" alt="recorrido6">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido7.jpg" class="d-block w-100" alt="recorrido7">
+      <img src="src/img/carrusel/22.jpg" class="d-block w-100" alt="recorrido7">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido8.jpg" class="d-block w-100" alt="recorrido8">
+      <img src="src/img/carrusel/23.jpg" class="d-block w-100" alt="recorrido8">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido9.jpg" class="d-block w-100" alt="recorrido9">
+      <img src="src/img/carrusel/24.jpg" class="d-block w-100" alt="recorrido9">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carrusel/recorrido10.jpg" class="d-block w-100" alt="recorrido10">
+      <img src="src/img/carrusel/25.jpg" class="d-block w-100" alt="recorrido10">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/26.jpg" class="d-block w-100" alt="recorrido11">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/27.jpg" class="d-block w-100" alt="recorrido12">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/28.jpg" class="d-block w-100" alt="recorrido13">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carrusel/29.jpg" class="d-block w-100" alt="recorrido14">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -111,9 +157,21 @@
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+      </button>
 </div>
+</div>
+</section>
+<br>
+<br>
+<br>
+<div class="container mt-5">
+  <h2 class="titulo2 d-flex flex-row-reverse">RECORRIDO</h2>
+</div>
+<section class="container col-lg-12 mb-5 py-5">
+  <div class="mb-5">
+    <img src="src/img/carrusel/1-16.jpg" class="img-fluid" alt="40 img">
+  </div>
+</section>
 
 
 
