taller de imagen terminado

--- a/TALLERDEIMAGEN.HTML
+++ b/TALLERDEIMAGEN.HTML
@@ -75,8 +75,8 @@
 <body style="background-color: #f3f1f1">
 <section class="cajacolor2 mb-5 py-5">
   <div class="container">
-    <div class="column justify-content-center col-12 col-lg-10">
-      <img src="src/img/carrusel/portada_Mesa de trabajo 1.jpg" alt="portada" class="my-5">
+    <div class="row centro col-12 col-lg-10">
+      <img src="src/img/carrusel/portada_Mesa de trabajo 1.jpg" alt="portada" class="img-fluid my-5">
     </div>
     <br>
     <br>
@@ -89,7 +89,7 @@
       VISUAL</h1>
       <h3 class= "subt"> PROYECTO 3-TO TRIMESTRE</h3>
     </div>
-    <div class="col-sm-12 col-md-4 offset-md-8 offset-sm-0 offset-lg-8">
+    <div class="col-sm-12">
       <h3 class="subt text-md-end text-left">
         TALLER DE IMAGEN Y COMUNICACIÓN VISUAL</h3>
     </div> 
@@ -173,6 +173,32 @@
   </div>
 </section>
 
+<section class="cajacolor3 mb-5 py-5">
+  <div class="container px-3py-5">
+    <div class="row">
+      <div class="col-lg-8 col-12 mt-5">
+        <img src="src/img/carrusel/1-17.jpg" alt="contraportada" class=" img-fluid">
+      </div>
+      <div class="col-lg-4 col-12 my-5">
+        <p class="parra"> Este trabajo fue uno de mis impulsores para seguir trabajando y querer mejorar en el uso de las reticulas como base, y aunque en este momento veo varios errores a corregir me gustaria seguir aprendiendo de esta rama.</p>
+      </div>
+    </div>
+    <br>
+    <br>
+  </div>
+</section>
+
+<section class="my-5 py-5">
+  <div class="container">
+    <h2 class="d-flex flex-row-reverse titulo2">HERRAMIENTAS</h2> 
+  </div>
+  <div class="container">
+    <div class="justify-content-center row">
+      <img src="src/herramientas/ILUUST.png" class="col-lg-2 col-4 my-5" alt="Illustrator">
+      <img src="src/herramientas/PHOTO.png" class="col-lg-2 col-4 my-5" alt="Photoshop">
+    </div>
+  </div>
+</section>
 
 
 </body>
