--- a/cardellina.html
+++ b/cardellina.html
@@ -72,18 +72,71 @@
   </div>
 </nav>
 
-<a href="FRUTOSDEVIDA.html">
-    <img width=500px class="3 alt"="3" src="taller3d/3.jpg" />
-</a>
-<a href="TALLERDEIMAGEN.HTML">
-  <img width=500px class="proyecto alt"="proyecto" src="src/img/carrusel/1-16.jpg" />
-</a>
-<a href="LAMPARA.HTML">
-  <img width=500px class="proyecto alt"="proyecto" src="src/img/lamparas/ABLU1.jpg" />
-</a>
-<a href="cardellina.html">
-  <img width=500px class="proyecto alt"="proyecto" src="src/CARDELLINA/caja c.jpg" />
-</a>
+<body style="background-color: #f3f1f1">
+    <section class="portada">
+        <img src="src/CARDELLINA/caja c.jpg" alt="Portada" class="img-portada">
+    </section>
+    <section class="container justify-content-start mb-5 mt-5">
+        <div class="row">
+          <div>
+            <h1 class="protitulo">CARDELLINA</h1>
+            <h3 class= "subt"> PROYECTO 2-DO TRIMESTRE</h3>
+          </div>
+          <div class="col-sm-12 col-md-4 offset-md-8 offset-sm-0 offset-lg-8">
+            <h3 class="subt text-md-end text-left">LABORATORIO BÁSICO DE DISEÑO BI Y TRIDIMENSIONAL</h3>
+          </div> 
+        </div>
+        <div>
+          <p class="parra col-12 col-lg-7 my-5">
+            En este proyecto se trabajo con la morfología de un animal endémico o nativo y se llevó a cabo todo un proceso de sintesis y abstraccion para la realización del producto final. 
+            Durante este curso puse en practica principios de diseño en torno a la abstracción y representación del animal elegido (cardellina rubra), y el uso de las maquinas del Laboratorio de Apoyo a la Docencia. <br>
+            <br
+            El producto final constó del rompecabezas en mdf de 3mm, con acabados en pintutra acrilica y laca transparente; un empaque llamativo donde desarrollé un icono y un patron.</p>
+          <br>
+        </div>
+      </section>
+
+      <section class="container mt-5">
+        <div class="row">
+          <div class="col-lg-12 col-12">
+            <img src="src/CARDELLINA/armado.jpg" class="img-fluid mb-4" alt="rompecabezas">
+          </div>
+          <div class="col-lg-6 col-12 gap-4 flex-lg-row flex-column d-flex">
+            <img src="src/CARDELLINA/Comp.jpg" class="img-fluid mb-4" alt="rompecabezas">
+            <img src="src/CARDELLINA/comp (1).jpg" class="img-fluid mb-4" alt="rompecabezas">
+          </div>
+        </div>
+      </section>
+
+      <section class="container">
+        <div class="row">
+            <div class="col-lg-8 col-12">
+                <img src="src/CARDELLINA/close3.jpg" class="img-fluid mb-4" alt="rompecabezas">
+                <img src="src/CARDELLINA/despiece.jpg" class="img-fluid mb-4" alt="despiece">
+            </div>
+            <div class="col-lg-4 gap-4 col-12">
+                <img src="src/CARDELLINA/caja.jpg" class="img-fluid mb-4" alt="caja">
+                <img src="src/CARDELLINA/tablero.jpg" class="img-fluid" alt="tablero">
+            </div>
+
+            </div>
+
+        </div>
+
+      </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 
