pagina cardelina terminada

--- a/cardellina.html
+++ b/cardellina.html
@@ -90,7 +90,7 @@
           <p class="parra col-12 col-lg-7 my-5">
             En este proyecto se trabajo con la morfología de un animal endémico o nativo y se llevó a cabo todo un proceso de sintesis y abstraccion para la realización del producto final. 
             Durante este curso puse en practica principios de diseño en torno a la abstracción y representación del animal elegido (cardellina rubra), y el uso de las maquinas del Laboratorio de Apoyo a la Docencia. <br>
-            <br
+            <br>
             El producto final constó del rompecabezas en mdf de 3mm, con acabados en pintutra acrilica y laca transparente; un empaque llamativo donde desarrollé un icono y un patron.</p>
           <br>
         </div>
@@ -112,30 +112,37 @@
         <div class="row">
             <div class="col-lg-8 col-12">
                 <img src="src/CARDELLINA/close3.jpg" class="img-fluid mb-4" alt="rompecabezas">
-                <img src="src/CARDELLINA/despiece.jpg" class="img-fluid mb-4" alt="despiece">
+                <img src="src/CARDELLINA/despiece2.jpg" class="img-fluid mb-4" alt="despiece">
             </div>
             <div class="col-lg-4 gap-4 col-12">
                 <img src="src/CARDELLINA/caja.jpg" class="img-fluid mb-4" alt="caja">
                 <img src="src/CARDELLINA/tablero.jpg" class="img-fluid" alt="tablero">
+                <img src="src/CARDELLINA/close2.jpg" class="img-fluid my-4" alt="close2">
             </div>
-
+            <div class="col-lg-12 col-12">
+                <img src="src/CARDELLINA/armado2.jpg" class="img-fluid mb-4" alt="armado2">
             </div>
-
         </div>
-
       </section>
 
+      <section class="container-fluid my-5 px-0">
+        <div>
+            <img src="src/CARDELLINA/rapport color final isaac doblecarta_page-0002.jpg" class="img-fluid mt-5" alt="rapport">
+            <img src="src/CARDELLINA/logotipo cardellina 2_page-0002 (1).jpg" class="img-fluid" alt="isologo">
+        </div>
+      </section>
 
-
-
-
-
-
-
-
-
-
-
+      <section class="my-5 py-5">
+        <div class="container">
+          <h2 class="d-flex flex-row-reverse titulo2">HERRAMIENTAS</h2> 
+        </div>
+        <div class="container">
+          <div class="justify-content-center row">
+            <img src="src/herramientas/ILUUST.png" class="col-lg-2 col-4 my-5" alt="Illustrator">
+          </div>
+        </div>
+      </section>
+    
 
 
 </body>
