--- a/LAMPARA.HTML
+++ b/LAMPARA.HTML
@@ -71,6 +71,11 @@
     </div>
   </div>
 </nav>
+<body style="background-color: #292929;">
+
+  <section class="portada">
+    <img src="src/img/lamparas/portada.jpg" alt="Portada" class="img-portada">
+</section>
 
 <section class="container justify-content-start mb-5 mt-5">
   <div class="row">
@@ -90,14 +95,42 @@
 <section class="container justify-content-start mt-6">
   <div class="row justify-content-start">
     <div class="col-12 col-lg-6">
-      <img src="src/img/lamparas/DEMA1.jpg" class="img-fluid mb-3 mt-6 alt=DEMA1">
+      <img src="src/img/lamparas/DEMA1.jpg" class="img-fluid mb-4 mt-6 alt=DEMA1">
     </div>
-    <div class="col-12 col-lg-6 flex column">
-      <img src="src/img/lamparas/DEMA2.jpg" class="img-fluid mb-4 mt-6 alt=DEMA2">
-      <img src="src/img/lamparas/DEMA3.jpg" class="img-fluid mb-4 alt=DEMA3">
+    <div class="col-6 col-lg-6 flex-sm-row d-flex flex-lg-column gap-4">
+      <img src="src/img/lamparas/DEMA2.jpg" class="img-fluid" alt="DEMA2">
+      <img src="src/img/lamparas/DEMA3.jpg" class="img-fluid" mb-4 alt="DEMA3">
     </div>
     <div class="col-sm-12 col-md-8 col-lg-12">
-      <img src="src/img/lamparas/DEMA4.jpg" class="img-fluid alt=DEMA4">
+      <img src="src/img/lamparas/DEMA4.jpg" class="img-fluid" alt="DEMA4">
+    </div>
+  </div>
+</section>
+
+<section class="container my-4 gap-4">
+  <div class="row">
+    <div class="col-lg-5 col-3">
+     <img src="src/img/lamparas/TRENCH2.jpg" class="img-fluid" alt="TRENCH2">
+    </div>
+    <div class="col-lg-7 col-12">
+      <img src="src/img/lamparas/TRENCH1.jpg" class="img-fluid" alt="TRENCH1">
+    </div>
+    <div class="col-lg-9 col-12">
+      <img src="src/img/lamparas/TRENCHE3.jpg" class="img-fluid mt-4" alt="TRENCH3">
+    </div>
+  </div>
+</section>
+
+<section class="container my-4 gap-4">
+  <div class="row">
+    <div class="col-lg-4 col-3">
+     <img src="src/img/lamparas/BLU2.jpg" class="img-fluid" alt="BLURRYFACE">
+    </div>
+    <div class="col-lg-8 col-12">
+      <img src="src/img/lamparas/BLU1.jpg" class="img-fluid" alt="BLURRYFACE">
+    </div>
+    <div class="col-lg-12 col-12">
+      <img src="src/img/lamparas/BLU3.jpg" class="img-fluid mt-4" alt="BLURRYFACE">
     </div>
   </div>
 </section>
